test/rewriter/errors/pat_integer_literal_octal.expected
File "pat_integer_literal_octal.ml", line 2, characters 14-61:
Error: ppx_yojson: unsupported payload